--- a/app-module/src/main/resources/application.properties
+++ b/app-module/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 #from this module: property is resolved, hints from lib module additional-spring-configuration-metadata.json are not suggested
 my.app.prop = my.lib.prop_value2
-#from lib module: property is resolved, hints from lib module additional-spring-configuration-metadata.json are not suggested
+#from this module additional-spring-configuration-metadata.json: property is resolved, hints are suggested
+my.app.additional.prop=my.app.additional.prop_value2
+#from lib module: property is resolved, hints from lib module additional-spring-configuration-metadata.json are not suggested - fixed
 my.lib.prop = my.app.prop_value2
 #from lib module additional-spring-configuration-metadata.json: property is not resolved, hints are not suggested
 my.lib.additional.prop = my.lib.additional.prop_value2
