--- a/lib-module/src/main/resources/application.properties
+++ b/lib-module/src/main/resources/application.properties
@@ -4,3 +4,5 @@ my.lib.prop = my.lib.prop_value1
 my.app.prop = my.app.prop_value1
 #from this module additional-spring-configuration-metadata.json: property resolved, hints suggested
 my.lib.additional.prop = my.lib.additional.prop_value1
+#from diff module additional-spring-configuration-metadata.json: property resolved, hints suggested
+my.app.additional.prop=my.app.additional.prop_value1
