resulted comments: all problems are fixed

--- a/app-module/src/main/resources/application.properties
+++ b/app-module/src/main/resources/application.properties
@@ -4,5 +4,5 @@ my.app.prop = my.lib.prop_value2
 my.app.additional.prop=my.app.additional.prop_value2
 #from lib module: property is resolved, hints from lib module additional-spring-configuration-metadata.json are not suggested - fixed
 my.lib.prop = my.app.prop_value2
-#from lib module additional-spring-configuration-metadata.json: property is not resolved, hints are not suggested
+#from lib module additional-spring-configuration-metadata.json: property is not resolved, hints are not suggested - fixed
 my.lib.additional.prop = my.lib.additional.prop_value2
