--- a/app-module/src/main/resources/application.properties
+++ b/app-module/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 #from this module: property is resolved, hints from lib module additional-spring-configuration-metadata.json are not suggested
 my.app.prop = my.lib.prop_value2
+#check the property resolution in modules tests
+my.app.prop2= my.app.src.prop2_value
 #from this module additional-spring-configuration-metadata.json: property is resolved, hints are suggested
 my.app.additional.prop=my.app.additional.prop_value2
 #from lib module: property is resolved, hints from lib module additional-spring-configuration-metadata.json are not suggested - fixed
