--- a/lib-module/src/main/resources/application.properties
+++ b/lib-module/src/main/resources/application.properties
@@ -1,7 +1,11 @@
 # from this module: property resolved, hints suggested
 my.lib.prop = my.lib.prop_value1
-# from diff module: property resolved, hints suggested
+# from this module: to check in tests
+my.lib.prop2= my.lib.src.prop2_value
+# from diff module: property resolved, hints suggested. This property is set in both modules
 my.app.prop = my.app.prop_value1
+# from diff module: property resolved. This property is set in this module only
+my.app.prop3= my.app.prop3_value_from_lib
 #from this module additional-spring-configuration-metadata.json: property resolved, hints suggested
 my.lib.additional.prop = my.lib.additional.prop_value1
 #from diff module additional-spring-configuration-metadata.json: property resolved, hints suggested
